# llm-information-extraction-workshop

./: .gitignore  README.md  pyproject.toml
01_setup/: README.md  test_ollama.py
02_basic_llm_extraction/: 01_simple_extractor.py  02_batch_query.py  README.md
02_local_llm_jobs/: 01_simple_extractor.py  02_batch_query.py  README.md
03_advanced_llm_jobs/: 02_structured_single_validated.py  03_structured_batch_validated.py  README.md
03_structured_llm_extraction/: 01_structured_basic.py  02_structured_single_validated.py  03_structured_batch_validated.py  README.md
04_cluster_execution/: 01_test_interactive.py  README.md  run_batch.sh
05_text_analysis/: README.md  batch_analyzer.py  example_usage.py  interview_analyzer.py  long_text_analyzer.py
05_text_analysis/modules/: interview_analyzer.py  long_text_analyzer.py  requeriments.txt
data/: book_authors_response.txt  book_names.txt  book_reviews.txt  book_reviews_response.csv  sample_interview.txt  sample_interview_1_english.txt  sample_interview_2_spanish.txt
log/: slurm.err  slurm.out
