[project]
name = "llm-information-extraction-workshop"
version = "0.1.0"
description = ""
authors = [{ name = "Javier Vela", email = "javier.vela00@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["ollama (>=0.5.1,<0.6.0)", "pydantic (>=2.11.7,<3.0.0)"]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
